Ops. Bug fixed. Cmake now copy shaders in build folder!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,3 +21,8 @@ execute_process(COMMAND ${CMAKE_COMMAND} -E copy_directory
     ${CMAKE_SOURCE_DIR}/assets
     ${CMAKE_BINARY_DIR}/assets
 )
+
+execute_process(COMMAND ${CMAKE_COMMAND} -E copy_directory
+    ${CMAKE_SOURCE_DIR}/shaders
+    ${CMAKE_BINARY_DIR}/shaders
+)
