removed options for profiling with gprof

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,10 +25,10 @@ include_directories(${TINYXML_INCLUDE_DIR})
 include_directories("${CMAKE_SOURCE_DIR}/include")
 
 # TODO: Build in Debug-Mode. Should be improved in the final release.
-set(CMAKE_CXX_FLAG "-g -pg -Wall")
+set(CMAKE_CXX_FLAG "-g -Wall")
 
 # TODO: Added for allowing profiling
-set(CMAKE_EXE_LINKER_FLAGS "-g -pg")
+# set(CMAKE_EXE_LINKER_FLAGS "-g -pg")
 
 # Build Executable
 add_executable(wingsofwar ${WOWSOURCES})
